# gizmo-app

./: Dockerfile  Makefile  README.md  alembic.ini  alembic.ini.bk  database.db  docker-compose.yml  pyproject.toml  schema.sql  wsgi.py
db/versions/: 1f9304ef9f8b_add_example_table.py
docker/db/: init.sql
gizmo/: main.py
gizmo/config/: config.py
gizmo/db/: models.py
gizmo/db/schema/: create_schema.py
gizmo/server/: app.py
gizmo/tests/server/: app_test.py
