[tool.poetry]
name = "gizmo"
version = "0.1.0"
description = ""
authors = ["Irfan Habib <irfan@irfanhabib.com>"]
readme = "README.md"
packages = [{include = "gizmo"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
pydantic = "^2.3.0"
celery = "^5.3.4"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-testing = "^0.8.1"
psycopg2-binary = "^2.9.7"
mypy = "^1.5.1"
flask-pydantic = "^0.11.0"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
